css/main.css
/* ... */
.hamburger--spin-r.is-active .hamburger-inner::before {
  top: 0;
  opacity: 0;
  transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
}
.hamburger--spin-r.is-active .hamburger-inner::after {
  bottom: 0;
  transform: rotate(90deg);
  transition: bottom 0.1s ease-out, transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
}

a.home, a.home:hover {
  color: white;
}

a.hotel {
  color: black;
}

a.hotel:hover {
  color: black;
  text-decoration: underline;
}

hr.details {
  height: 2px;
  width: 70%;
  margin: auto;
}

header {
  padding-top: 45%;
  padding-bottom: 10%;
  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.15) 10%), url("../assets/img/bg-masthead.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}

#mainNav.navbar-scrolled {
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
  background-color: #000000;
}

.navbar-toggler-right,
.navbar-toggler:focus,
.navbar-toggler:active,
.navbar-toggler-icon:focus {
  box-shadow: none;
  border: none;
}

div.wrapper {
  display: grid;
  grid-template-rows: 200% 200%;
  grid-template-columns: 30% 30% 30%;
  grid-gap: 10px;
  background-color: #fff;
  color: #444;
}

div.box {
  background-color: #eae0d9;
  color: #000000;
  font-size: 1.6rem;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 0;
  padding-top: 50%;
  padding-bottom: 50%;
}

div.box:hover {
  box-sizing: border-box;
  background-color: white;
  outline: 1px solid #eae0d9;
}

.top-buffer {
  margin-top: 20px;
}

option {
  font-family: orpheuspro, serif;
}

/*# sourceMappingURL=main.css.map */

